--- a/package.json
+++ b/package.json
@@ -11,7 +11,16 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^16.7.6",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-prettier": "^3.4.1",
     "git-commit-msg-linter": "^3.2.8",
+    "prettier": "^2.3.2",
     "typescript": "^4.4.2"
   }
 }
