--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "typescript-express-api-repo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
     "test": "jest",
-    "test:staged": "jest"
+    "test:staged": "jest",
+    "dev": "ts-node-dev ."
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,11 @@
     "prettier": "^2.3.2",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.2"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.13",
+    "express": "^4.17.1"
   }
 }
