--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,8 @@
         "prettier"
     ],
     "rules": {
-        "prettier/prettier": "error"
+        "prettier/prettier": "error",
+        "import/no-unresolved": "off",
+        "import/extensions": "off"
     }
 }
