--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "test": "jest",
     "test:staged": "jest",
-    "dev": "ts-node-dev ."
+    "dev": "NODE_ENV=development ts-node-dev ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.6",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
@@ -32,6 +33,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   }
 }
